--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ either = "1.9"
 mockall = "0.11.2"
 derivative = "2.2.0"
 glob = "0.3.1"
-
+tokio = { version = "1.34.0", features = ["full"] }
+futures = { version = "0.3.29" }
