--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 description = "A simple library providing the asynchronous methods for tesseract api."
 name = "rusttesserast"
-version = "0.0.1"
-edition = "2023"
+version = "0.0.1-alpha.0"
+edition = "2018"
 rust-version = "1.74.0"
 license = "MIT"
 readme = "README.md"
