--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.0.1-alpha.0"
 edition = "2018"
 rust-version = "1.74.0"
 license = "MIT"
+repository = "https://github.com/spectrtrec/rusttesserast"
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
