--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 description = "A simple library providing the asynchronous methods for tesseract api."
 name = "rusttesserast"
-version = "0.0.1-alpha.2"
+version = "0.0.1-alpha.3"
 edition = "2018"
 rust-version = "1.74.0"
+documentation = "https://docs.rs/rusttesserast/latest/rusttesserast/"
 license = "MIT"
 repository = "https://github.com/spectrtrec/rusttesserast"
 readme = "README.md"
