--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,6 @@ derivative = "2.2.0"
 glob = "0.3.1"
 tokio = { version = "1.34.0", features = ["full"] }
 futures = { version = "0.3.29" }
+
+[lib]
+doctest = false
