--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 description = "A simple library providing the asynchronous methods for tesseract api."
 name = "rusttesserast"
-version = "0.0.1-alpha.4"
+version = "0.0.1"
 edition = "2018"
 rust-version = "1.74.0"
 documentation = "https://docs.rs/rusttesserast/latest/rusttesserast/"
