Add continue-on-error for ci step.

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -1,9 +1,23 @@
 name: Test lib.
-on: push
+on: 
+  push:
+    branches: [ main, dev ]
 
 jobs:
+  stop-image:
+    runs-on: self-hosted
+    steps:
+      - name: Checkout Dev
+        uses: actions/checkout@v4
+      - name: Stop container
+        continue-on-error: true
+        run: docker stop rtest
+      - name: Remove container
+        continue-on-error: true
+        run : docker rm rtest  
   build-docker:
     runs-on: self-hosted
+    needs: [ stop-image ]
     steps:
       - name: Checkout Dev
         uses: actions/checkout@v4
@@ -13,6 +27,7 @@ jobs:
         run : docker run --name rtest -d test_rust
   build-app:
     runs-on: self-hosted
+    needs: [ stop-image, build-docker ]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -20,6 +35,7 @@ jobs:
         run: docker exec rtest cargo build
   test-app:
     runs-on: self-hosted
+    needs: [ stop-image, build-docker, build-app ]
     steps:
       - name: Checkout Dev
         uses: actions/checkout@v4
