Rename docker image name.

--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Build and run docker container
         run: docker build -t rtesseract .
       - name: Run docker
-        run : docker run --name rtest -d test_rust
+        run : docker run --name rtest -d rtesseract
   build-app:
     runs-on: self-hosted
     needs: [ stop-image, build-docker ]
